# C2J-Compiler

./: .gitignore  CMakeLists.txt  README.md  build.bat  run.bat  test.bat
include/: arena.h
src/: arena.cpp  main.cpp
tests/: arena_tests.cpp  test.h  test_main.cpp
